@@ -6,7 +6,8 @@ osha.theme Changelog
 
 - Made Facebook Imagelink conditional 
   [pilz]
-
+- Fixed ordering for oshmail previous issues
+  [pilz]
 
 1.3.34 (2010-10-07)
 -------------------
